add logos to home page
Signed-off-by: Carlos Santana <csantana23@gmail.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -75,6 +75,25 @@
     </div>
   </section>
 
+  <section class="case-studies-container">
+    <div class="md-grid md-typeset" style="width: 100%">
+      <div id="case-studies-title">
+        <h3>Case Studies:</h3>
+      </div>
+      <div id="case-studies">
+        <div class="logo">
+          <img src="images/case-studies/deepc.png" alt="" draggable="false" />
+        </div>
+        <div class="logo">
+          <img src="images/case-studies/outfit7.png" alt="" draggable="false" />
+        </div>
+        <div class="logo">
+          <img src="images/case-studies/puppet.png" alt="" draggable="false" />
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="usedby-container">
     <div class="md-grid md-typeset" style="width: 100%">
       <div id="usedby-title">
