--- a/overrides/home.html
+++ b/overrides/home.html
@@ -81,15 +81,25 @@
         <h3>Case Studies:</h3>
       </div>
       <div id="case-studies">
+
+        <a href="{{ 'about/case-studies/deepc/' | url }}">
         <div class="logo">
           <img src="images/case-studies/deepc.png" alt="" draggable="false" />
         </div>
+        </a>
+
+        <a href="{{ 'about/case-studies/outfit7/' | url }}">
         <div class="logo">
           <img src="images/case-studies/outfit7.png" alt="" draggable="false" />
         </div>
+        </a>
+
+        <a href="{{ 'about/case-studies/puppet/' | url }}">
         <div class="logo">
           <img src="images/case-studies/puppet.png" alt="" draggable="false" />
         </div>
+        </a>
+
       </div>
     </div>
   </section>
