add announcement bar, change title in Blog index

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block announce %}
+Knative is 1.0! 🎉 <a href=https://knative.dev/blog/articles/knative-1.0/>Check out our announcement on the Knative Blog<a/>
+{% endblock %}
+
 {% block extrahead %}
 <meta name="theme-color" content="#1a7dc9" />
 {% endblock %}
