--- a/overrides/main.html
+++ b/overrides/main.html
@@ -5,7 +5,10 @@
 {% endblock %}
 
 {% block announce %}
-Knative is 1.0! 🎉 <a href=https://knative.dev/blog/articles/knative-1.0/>Check out our announcement on the Knative Blog<a/>
+
+<div class="versionwarning" style="display: flex; justify-content: center;">
+  <p style="color: #FFF">Knative is 1.0! 🎉 <a href=https://knative.dev/blog/articles/knative-1.0/>Check out our announcement on the Knative Blog<a/></p>
+</div>
 
 {% if config.extra.version_warning %}
 <div class="versionwarning" style="margin: .6rem auto; padding: 0 .8rem">
