wait I did not need .md smh

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -14,7 +14,7 @@
 {% endif %}
 {% block announce %}
 <div class="versionwarning" style="display: flex; justify-content: center;">
-  <p>Knative is 1.0! 🎉  Check out our announcement on the <a href=https://knative.dev/blog/articles/knative-1.0.md/>Knative Blog<a/></p>
+  <p>Knative is 1.0! 🎉  Check out our announcement on the <a href=https://knative.dev/blog/articles/knative-1.0/>Knative Blog<a/></p>
 </div>
 {% endblock %}
 
