Fixed more broken CloudEvent docs links in the documentation. Updated links to CloudEvents v1.0 documentation to CloudEvents v1.0.1 documentation

--- a/archived/v0.23-docs/eventing/broker/kafka-broker/index.html
+++ b/archived/v0.23-docs/eventing/broker/kafka-broker/index.html
@@ -2130,7 +2130,7 @@ with Apache Kafka for the Knative Broker and Trigger model.</p>
 <li>Control plane High Availability</li>
 <li>Horizontally scalable data plane</li>
 <li><a href="#kafka-producer-and-consumer-configurations">Extensively configurable</a></li>
-<li>Ordered delivery of events based on <a href="https://github.com/cloudevents/spec/blob/master/extensions/partitioning.md">CloudEvents partitioning extension</a></li>
+<li>Ordered delivery of events based on <a href="https://github.com/cloudevents/spec/blob/v1.0.1/extensions/partitioning.md">CloudEvents partitioning extension</a></li>
 <li>Support any Kafka version, see <a href="https://cwiki.apache.org/confluence/display/KAFKA/Compatibility+Matrix">compatibility matrix</a></li>
 </ul>
 <h2 id="prerequisites">Prerequisites</h2>
