--- a/archived/v0.23-docs/eventing/event-registry/index.html
+++ b/archived/v0.23-docs/eventing/event-registry/index.html
@@ -2125,9 +2125,9 @@ type information in the cluster data store.</p>
 <ol>
 <li>Read about the <a href="../broker/">broker</a> and <a href="../broker/triggers/">trigger</a> objects.</li>
 <li>Be familiar with the
-<a href="https://github.com/cloudevents/spec/blob/master/spec.md">CloudEvents spec</a>,
+<a href="https://github.com/cloudevents/spec/blob/v1.0.1/spec.md">CloudEvents spec</a>,
 particularly the
-<a href="https://github.com/cloudevents/spec/blob/master/spec.md#context-attributes">Context Attributes</a>
+<a href="https://github.com/cloudevents/spec/blob/v1.0.1/spec.md#context-attributes">Context Attributes</a>
 section.</li>
 <li>Be familiar with <a href="../sources">event sources</a>.</li>
 </ol>
