--- a/archived/v0.23-docs/eventing/index.html
+++ b/archived/v0.23-docs/eventing/index.html
@@ -2146,7 +2146,7 @@ consumer.</li>
 </li>
 <li>Ensure cross-service interoperability. Knative Eventing is consistent with
 the
-<a href="https://github.com/cloudevents/spec/blob/master/spec.md#design-goals">CloudEvents</a>
+<a href="https://github.com/cloudevents/spec/blob/v1.0.1/spec.md#design-goals">CloudEvents</a>
 specification that is developed by the
 <a href="https://lists.cncf.io/g/cncf-wg-serverless">CNCF Serverless WG</a>.</li>
 </ol>
