--- a/archived/v0.23-docs/eventing/samples/container-source/index.html
+++ b/archived/v0.23-docs/eventing/samples/container-source/index.html
@@ -2237,7 +2237,7 @@ variables.</li>
 <code>K_SINK</code> and <code>K_CE_OVERRIDES</code>, resolved from <code>spec.sink</code> and <code>spec.ceOverrides</code> respectively.</li>
 <li>The event messages shall be sent to the sink URI specified in <code>K_SINK</code>. The message can be any
 format.
-<a href="https://github.com/cloudevents/spec/blob/master/spec.md#design-goals">CloudEvents</a>
+<a href="https://github.com/cloudevents/spec/blob/v1.0.1/spec.md#design-goals">CloudEvents</a>
 format is recommended.</li>
 </ul>
 <p><a href="https://github.com/knative/eventing/blob/main/cmd/heartbeats/main.go">heartbeats</a>
