--- a/overrides/home.html
+++ b/overrides/home.html
@@ -15,7 +15,7 @@
             <a href="{{ 'getting-started/' | url }}" class="md-button md-button--primary">
               Developer? Get Started Here!
             </a>
-            <a href="{{ 'admin/install/' | url }}" class="md-button"> Cluster Administrator? Get Started Here!</a>
+            <a href="{{ 'install/' | url }}" class="md-button"> Cluster Administrator? Get Started Here!</a>
           </p>
         </div>
       </div>
