Update contributing links

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -175,7 +175,7 @@
             {% include ".icons/fontawesome/brands/github.svg" %}
           </div>
           <h4>Contributions Welcome</h4>
-          <a href="https://github.com/knative/community/blob/main/CONTRIBUTING.md" title="Contributing Link" class="md-button">Contribute</a>
+          <a href="./community/contributing/" title="Contributing Link" class="md-button">Contribute</a>
           <p>Want to join the fun on Github? New users are always welcome!</p>
         </div>
         <div class="pane">
