added need to know more section, removed old sections and started why serverless section

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -43,36 +43,27 @@
     </div>
   </section>
 
-  <section class="features-container">
+  <section class="need-to-know-more-container">
     <div class="md-grid md-typeset">
-      <h2>Highlights</h2>
-      <ul class="task-list-control" style="columns: 2">
-        <li class="task-list-item">
-          <input type="checkbox" checked disabled />
-          <span class="task-list-indicator"></span>
-          <b>Stand up scalable, secure, stateless services in seconds.</b>
-        </li>
-        <li class="task-list-item">
-          <input type="checkbox" checked disabled /><span class="task-list-indicator"></span><b>Focused API</b> with
-          higher level abstractions for common app use-cases.
-        </li>
-        <li class="task-list-item">
-          <input type="checkbox" checked disabled /><span class="task-list-indicator"></span><b>Pluggable components</b>
-          let you bring your own logging and monitoring, networking, and service mesh.
-        </li>
-        <li class="task-list-item">
-          <input type="checkbox" checked disabled /><span class="task-list-indicator"></span>Run Knative anywhere
-          Kubernetes runs, <b>never worry about vendor lock-in.</b>
-        </li>
-        <li class="task-list-item">
-          <input type="checkbox" checked disabled /><span class="task-list-indicator"></span><b>Seamless developer
-            experience</b>, supports GitOps, DockerOps, ManualOps, etc..
-        </li>
-        <li class="task-list-item">
-          <input type="checkbox" checked disabled /><span class="task-list-indicator"></span><b>Supports many common
-            tools and frameworks</b> such as Django, Ruby on Rails, Spring, and many more.
-        </li>
-      </ul>
+      <h1>Need to know more?</h1>
+      <p class="normal-text">
+        Learn about how Knative works with Kubernetes and the underlying ideas behind containers<br>
+        and serverless infrastructure.
+      </p>
+      <a href="{{ 'getting-started/' | url }}" class="md-button call-to-action">
+        Explore Knative
+      </a>
+    </div>
+  </section>
+
+  <section class="why-serverless-container">
+    <div class="md-grid md-typeset">
+      <h1>Why serverless containers?</h1>
+      <p class="normal-text">
+        Serverless refers to running back-end programs and processes in the cloud. Serverless works on an<br>
+        as-used basis, meaning that companies only use what they pay for. Knative is a platform-agnostic<br>
+        solution for running serverless deployments.
+      </p>
     </div>
   </section>
 
