fixed some responsiveness and css issues and finished case studies and kantive components sections

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -74,17 +74,19 @@
         Knative has two main components that empower teams working with Kubernetes. Serving and<br>
         Eventing work together to automate and manage tasks and applications.
       </p>
-      <img src="images/home-images/knative_componets_image.png" alt="" draggable="false" />
-      <div class="text-table">
-        <p class="normal-text">
-          Run serverless containers in Kubernetes with ease. Knative takes care of the details of networking,
-          autoscaling (even to zero), and revision tracking. Teams can focus on core logic using any programming
-          language.
-        </p>
-        <p class="normal-text">
-          Universal subscription, delivery and management of events. Build modern apps by attaching compute to a data
-          stream with declarative event connectivity and developer friendly object models.
-        </p>
+      <div class="components-content">
+        <img class="components-img" src="images/home-images/knative_componets_image.png" alt="" draggable="false" />
+        <div class="text-table">
+          <p class="normal-text">
+            Run serverless containers in Kubernetes with ease. Knative takes care of the details of networking,
+            autoscaling (even to zero), and revision tracking. Teams can focus on core logic using any programming
+            language.
+          </p>
+          <p class="normal-text">
+            Universal subscription, delivery and management of events. Build modern apps by attaching compute to a data
+            stream with declarative event connectivity and developer friendly object models.
+          </p>
+        </div>
       </div>
     </div>
   </section>
@@ -108,48 +110,51 @@
   </section>
 
   <section class="case-studies-container">
-    <div class="md-grid md-typeset" style="width: 100%">
-      <h1>Case Studies:</h1>
-      <div id="case-studies">
+    <div class="md-grid md-typeset">
+      <h1>Case Studies</h1>
+      <div class="cases-table">
         <div class="col">
           <a href="{{ 'about/case-studies/deepc/' | url }}">
             <div class="logo">
-              <img src="images/case-studies/deepc.png" alt="" draggable="false" />
+              <img class="deepc" src="images/case-studies/deepc.png" alt="" draggable="false" />
             </div>
           </a>
+          <hr>
           <p class="normal-text">
             "It should be possible for<br>
             somebody with an algorithm<br>
-            to have it on the platform in an hour"
+            to have it on the platform in an hour"<br><br>
 
-            -- Andrew Webber,
+            -- Andrew Webber,<br>
             Senior Software Engineer for deepc
           </p>
         </div>
         <div class="col">
           <a href="{{ 'about/case-studies/outfit7/' | url }}">
             <div class="logo">
-              <img src="images/case-studies/outfit7.png" alt="" draggable="false" />
+              <img class="outfit7" src="images/case-studies/outfit7.png" alt="" draggable="false" />
             </div>
           </a>
+          <hr>
           <p class="normal-text">
             "The community support is<br>
             really great. The hands-on<br>
             experience with Knative was<br>
             so impressive. On the Slack<br>
             channel, we got actual<br>
-            engineers to answer our questions"
+            engineers to answer our questions"<br><br>
 
-            --Tilen Kavcic,
+            --Tilen Kavcic,<br>
             Software Engineer for Outfit7
           </p>
         </div>
         <div class="col">
           <a href="{{ 'about/case-studies/puppet/' | url }}">
             <div class="logo">
-              <img src="images/case-studies/puppet.png" alt="" draggable="false" />
+              <img class="puppet" src="images/case-studies/puppet.png" alt="" draggable="false" />
             </div>
           </a>
+          <hr>
           <p class="normal-text">
             "I'm a strong believer in<br>
             working with open-source<br>
@@ -159,9 +164,9 @@
             Knative, Ambassador, and<br>
             gVisor --All of which we depend<br>
             on to make our product<br>
-            functional."
+            functional."<br><br>
 
-            --Noah Fontes,
+            --Noah Fontes,<br>
             Senior Principal Software Engineer for Puppet
           </p>
         </div>
