--- a/overrides/home.html
+++ b/overrides/home.html
@@ -1,7 +1,7 @@
 {% extends "main.html" %} {% block content %}
 <link rel="stylesheet" href="{{ 'assets/stylesheets/home.css' | url }}" />
 
-<div class="md-container">
+<div class="md-container home-page">
   <section class="home-container">
     <div class="md-grid md-typeset">
       <div class="mdx-hero">
@@ -60,10 +60,94 @@
     <div class="md-grid md-typeset">
       <h1>Why serverless containers?</h1>
       <p class="normal-text">
-        Serverless refers to running back-end programs and processes in the cloud. Serverless works on an<br>
-        as-used basis, meaning that companies only use what they pay for. Knative is a platform-agnostic<br>
+        Serverless refers to running back-end programs and processes in the cloud. Serverless works on an as-used basis,
+        meaning that companies only use what they pay for. Knative is a platform-agnostic
         solution for running serverless deployments.
       </p>
+      <div class="img-table">
+        <div class="img-row">
+          <div class="img-col">
+            <div class="reason-img">
+              <img src="images/home-images/blue_simple_abstractions_icon.png"
+                onmouseover="this.src='images/home-images/dkblue_simple_abstractions_icon.png'"
+                onmouseout="this.src='images/home-images/blue_simple_abstractions_icon.png'" alt="" draggable="false">
+            </div>
+            <div class="reason-text">
+              <h2>Simpler Abstractions</h2>
+              <p class="normal-text">
+                Simplify your YAML with our custom CRD's
+              </p>
+            </div>
+          </div>
+          <div class="img-col">
+            <div class="reason-img">
+              <img src="images/home-images/blue_autoscaling_icon.png"
+                onmouseover="this.src='images/home-images/dkblue_autoscaling_icon.png'"
+                onmouseout="this.src='images/home-images/blue_autoscaling_icon.png'" alt="" draggable="false">
+            </div>
+            <div class="reason-text">
+              <h2>Autoscaling</h2>
+              <p class="normal-text">
+                Scale down to zero and from zero
+              </p>
+            </div>
+          </div>
+          <div class="img-col">
+            <div class="reason-img">
+              <img src="images/home-images/blue_progressive_rollouts_icon.png"
+                onmouseover="this.src='images/home-images/dkblue_progressive_rollouts_icon.png'"
+                onmouseout="this.src='images/home-images/blue_progressive_rollouts_icon.png'" alt="" draggable="false">
+            </div>
+            <div class="reason-text">
+              <h2>Progressive Rollouts</h2>
+              <p class="normal-text">
+                Choose your rollout strategy depending on your needs
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="img-row">
+          <div class="img-col">
+            <div class="reason-img">
+              <img src="images/home-images/blue_event_intergrations_icon.png"
+                onmouseover="this.src='images/home-images/dkblue_event_intergrations_icon.png'"
+                onmouseout="this.src='images/home-images/blue_event_intergrations_icon.png'" alt="" draggable="false">
+            </div>
+            <div class="reason-text">
+              <h2>Event Integrations</h2>
+              <p class="normal-text">
+                Handle events from many sources
+              </p>
+            </div>
+          </div>
+          <div class="img-col">
+            <div class="reason-img">
+              <img src="images/home-images/blue_handle_events_icon.png"
+                onmouseover="this.src='images/home-images/dkblue_handle_events_icon.png'"
+                onmouseout="this.src='images/home-images/blue_handle_events_icon.png'" alt="" draggable="false">
+            </div>
+            <div class="reason-text">
+              <h2>Handle Events</h2>
+              <p class="normal-text">
+                Trigger handlers from the event broker
+              </p>
+            </div>
+          </div>
+          <div class="img-col">
+            <div class="reason-img">
+              <img src="images/home-images/blue_plugable_icon.png"
+                onmouseover="this.src='images/home-images/dkblue_plugable_icon.png'"
+                onmouseout="this.src='images/home-images/blue_plugable_icon.png'" alt="" draggable="false">
+            </div>
+            <div class="reason-text">
+              <h2>Plugable</h2>
+              <p class="normal-text">
+                Kubernetes native to be integrated and extended
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -125,7 +209,7 @@
             somebody with an algorithm<br>
             to have it on the platform in an hour"<br><br>
 
-            -- Andrew Webber,<br>
+            —Andrew Webber,<br>
             Senior Software Engineer for deepc
           </p>
         </div>
@@ -144,7 +228,7 @@
             channel, we got actual<br>
             engineers to answer our questions"<br><br>
 
-            --Tilen Kavcic,<br>
+            —Tilen Kavcic,<br>
             Software Engineer for Outfit7
           </p>
         </div>
@@ -166,8 +250,8 @@
             on to make our product<br>
             functional."<br><br>
 
-            --Noah Fontes,<br>
-            Senior Principal Software Engineer for Puppet
+            —Noah Fontes,<br>
+            Senior Principal Software Engineer for<br>Puppet
           </p>
         </div>
       </div>
