improved font sizes and responsivenes in titles + just the whats next section to go and some adjustments in the on hover changing images

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -178,18 +178,51 @@
   <section class="trying-it-all-container">
     <div class="md-grid md-typeset">
       <h1>Trying it all together</h1>
-      <p class="normal-text">
-        From container to URL<br>
-        with less YAML config
-      </p>
-      <p class="normal-text">
-        Scale down to zero<br>
-        based on traffic patterns
-      </p>
-      <p class="normal-text">
-        Control traffic shifting<br>
-        for smoother rollouts
-      </p>
+      <div class="img-table">
+        <div class="img-row">
+          <div class="img-col">
+            <div class="reason-img">
+              <img src="images/home-images/dev_focus_code_icon.png" alt="" draggable="false">
+            </div>
+            <div class="reason-text">
+              <h2>Developers focus on code</h2>
+              <p class="normal-text">
+                From container to URL<br>
+                with less YAML config
+              </p>
+            </div>
+          </div>
+
+          <div class="img-col">
+            <div class="reason-img">
+              <img src="images/home-images/dkblue_scale_icon.png" alt="" draggable="false">
+            </div>
+            <div class="reason-text">
+              <h2>Scale up and down</h2>
+              <p class="normal-text">
+                Scale down to zero<br>
+                based on traffic patterns
+              </p>
+            </div>
+          </div>
+
+          <div class="img-col">
+            <div class="reason-img">
+              <img src="images/home-images/cloud_agnostic_icon.png" alt="" draggable="false">
+            </div>
+            <div class="reason-text">
+              <h2>Cloud agnostic</h2>
+              <p class="normal-text">
+                Control traffic shifting<br>
+                for smoother rollouts
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a href="{{ 'getting-started/' | url }}" class="md-button call-to-action">
+        Deploy Knative Today
+      </a>
     </div>
   </section>
 
@@ -205,12 +238,11 @@
           </a>
           <hr>
           <p class="normal-text">
-            "It should be possible for<br>
-            somebody with an algorithm<br>
-            to have it on the platform in an hour"<br><br>
+            "It should be possible for
+            somebody with an algorithm< to have it on the platform in an hour"<br><br>
 
-            —Andrew Webber,<br>
-            Senior Software Engineer for deepc
+              —Andrew Webber,<br>
+              Senior Software Engineer for deepc
           </p>
         </div>
         <div class="col">
@@ -221,10 +253,10 @@
           </a>
           <hr>
           <p class="normal-text">
-            "The community support is<br>
-            really great. The hands-on<br>
-            experience with Knative was<br>
-            so impressive. On the Slack<br>
+            "The community support is
+            really great. The hands-on
+            experience with Knative was
+            so impressive. On the Slack
             channel, we got actual<br>
             engineers to answer our questions"<br><br>
 
@@ -240,14 +272,14 @@
           </a>
           <hr>
           <p class="normal-text">
-            "I'm a strong believer in<br>
-            working with open-source<br>
-            vendors. We've made<br>
-            contributions to numerous<br>
-            projects, including Tekton,<br>
-            Knative, Ambassador, and<br>
-            gVisor --All of which we depend<br>
-            on to make our product<br>
+            "I'm a strong believer in
+            working with open-source
+            vendors. We've made
+            contributions to numerous
+            projects, including Tekton,
+            Knative, Ambassador, and
+            gVisor --All of which we depend
+            on to make our product
             functional."<br><br>
 
             —Noah Fontes,<br>
@@ -260,7 +292,7 @@
 
   <section class="whats-next-container">
     <div class="md-grid md-typeset">
-      <h2>What's Next?</h2>
+      <h1>What's Next?</h1>
       <div class="component-flex">
         <div class="pane">
           <div class="twemoji">
