--- a/overrides/home.html
+++ b/overrides/home.html
@@ -239,10 +239,10 @@
           <hr>
           <p class="normal-text">
             "It should be possible for
-            somebody with an algorithm< to have it on the platform in an hour"<br><br>
+            somebody with an algorithm to have it on the platform in an hour"<br><br>
 
-              —Andrew Webber,<br>
-              Senior Software Engineer for deepc
+            —Andrew Webber,<br>
+            Senior Software Engineer for deepc
           </p>
         </div>
         <div class="col">
@@ -257,7 +257,7 @@
             really great. The hands-on
             experience with Knative was
             so impressive. On the Slack
-            channel, we got actual<br>
+            channel, we got actual
             engineers to answer our questions"<br><br>
 
             —Tilen Kavcic,<br>
@@ -295,28 +295,31 @@
       <h1>What's Next?</h1>
       <div class="component-flex">
         <div class="pane">
-          <div class="twemoji">
-            {% include ".icons/fontawesome/brands/slack.svg" %}
-          </div>
-          <h4>Talk to us on Slack</h4>
-          <a href="https://slack.knative.dev" title="Slack Link" class="md-button">Talk</a>
-          <p>Interested in learning more, speaking to other contributors, or finding answers?</p>
+          <a href="https://slack.knative.dev" title="Slack Link">
+            <div class="twemoji">
+              {% include ".icons/fontawesome/brands/slack.svg" %}
+            </div>
+            <h2>Talk to us on Slack</h2>
+            <p class="normal-text">Interested in learning more, speaking to other contributors, or finding answers?</p>
+          </a>
         </div>
         <div class="pane">
-          <div class="twemoji">
-            {% include ".icons/fontawesome/brands/github.svg" %}
-          </div>
-          <h4>Contributions Welcome</h4>
-          <a href="./community/contributing/" title="Contributing Link" class="md-button">Contribute</a>
-          <p>Want to join the fun on Github? New users are always welcome!</p>
+          <a href="./community/contributing/" title="Contributing Link">
+            <div class="twemoji">
+              {% include ".icons/fontawesome/brands/github.svg" %}
+            </div>
+            <h2>Contributions Welcome</h2>
+            <p class="normal-text">Want to join the fun on Github? New users are always welcome!</p>
+          </a>
         </div>
         <div class="pane">
-          <div class="twemoji">
-            {% include ".icons/fontawesome/brands/twitter.svg" %}
-          </div>
-          <h4>Follow us on Twitter</h4>
-          <a href="https://twitter.com/KnativeProject" title="Twitter Link" class="md-button">Follow</a>
-          <p>For features announcements, interesting Knative news, and other great things.</p>
+          <a href="https://twitter.com/KnativeProject" title="Twitter Link">
+            <div class="twemoji">
+              {% include ".icons/fontawesome/brands/twitter.svg" %}
+            </div>
+            <h2>Follow us on Twitter</h2>
+            <p class="normal-text">For features announcements, interesting Knative news, and other great things.</p>
+          </a>
         </div>
       </div>
     </div>
