--- a/overrides/home.html
+++ b/overrides/home.html
@@ -220,7 +220,7 @@
           </div>
         </div>
       </div>
-      <a href="{{ 'getting-started/' | url }}" class="md-button call-to-action">
+      <a href="{{ 'install/' | url }}" class="md-button call-to-action">
         Deploy Knative Today
       </a>
     </div>
@@ -235,56 +235,56 @@
             <div class="logo">
               <img class="deepc" src="images/case-studies/deepc.png" alt="" draggable="false" />
             </div>
-          </a>
-          <hr>
-          <p class="normal-text">
-            "It should be possible for
-            somebody with an algorithm to have it on the platform in an hour"<br><br>
+            <hr>
+            <p class="normal-text">
+              "It should be possible for
+              somebody with an algorithm to have it on the platform in an hour"<br><br>
 
-            —Andrew Webber,<br>
-            Senior Software Engineer for deepc
-          </p>
+              —Andrew Webber,<br>
+              Senior Software Engineer for deepc
+            </p>
+          </a>
         </div>
         <div class="col">
           <a href="{{ 'about/case-studies/outfit7/' | url }}">
             <div class="logo">
               <img class="outfit7" src="images/case-studies/outfit7.png" alt="" draggable="false" />
             </div>
-          </a>
-          <hr>
-          <p class="normal-text">
-            "The community support is
-            really great. The hands-on
-            experience with Knative was
-            so impressive. On the Slack
-            channel, we got actual
-            engineers to answer our questions"<br><br>
+            <hr>
+            <p class="normal-text">
+              "The community support is
+              really great. The hands-on
+              experience with Knative was
+              so impressive. On the Slack
+              channel, we got actual
+              engineers to answer our questions"<br><br>
 
-            —Tilen Kavcic,<br>
-            Software Engineer for Outfit7
-          </p>
+              —Tilen Kavcic,<br>
+              Software Engineer for Outfit7
+            </p>
+          </a>
         </div>
         <div class="col">
           <a href="{{ 'about/case-studies/puppet/' | url }}">
             <div class="logo">
               <img class="puppet" src="images/case-studies/puppet.png" alt="" draggable="false" />
             </div>
-          </a>
-          <hr>
-          <p class="normal-text">
-            "I'm a strong believer in
-            working with open-source
-            vendors. We've made
-            contributions to numerous
-            projects, including Tekton,
-            Knative, Ambassador, and
-            gVisor --All of which we depend
-            on to make our product
-            functional."<br><br>
+            <hr>
+            <p class="normal-text">
+              "I'm a strong believer in
+              working with open-source
+              vendors. We've made
+              contributions to numerous
+              projects, including Tekton,
+              Knative, Ambassador, and
+              gVisor --All of which we depend
+              on to make our product
+              functional."<br><br>
 
-            —Noah Fontes,<br>
-            Senior Principal Software Engineer for<br>Puppet
-          </p>
+              —Noah Fontes,<br>
+              Senior Principal Software Engineer for<br>Puppet
+            </p>
+          </a>
         </div>
       </div>
     </div>
