--- a/overrides/home.html
+++ b/overrides/home.html
@@ -34,7 +34,7 @@
                 <img src="images/corporate-logos/Redhat.svg" alt="" draggable="false" />
               </div>
               <div class="logo triggermesh">
-                <img src="images/corporate-logos/triggermesh_logo_hp.png" alt="" draggable="false" />
+                <img src="images/corporate-logos/triggermesh_logo.svg" alt="" draggable="false" />
               </div>
             </div>
           </div>
@@ -68,9 +68,9 @@
         <div class="img-row">
           <div class="img-col">
             <div class="reason-img">
-              <img src="images/home-images/blue_simple_abstractions_icon.png"
-                onmouseover="this.src='images/home-images/dkblue_simple_abstractions_icon.png'"
-                onmouseout="this.src='images/home-images/blue_simple_abstractions_icon.png'" alt="" draggable="false">
+              <img src="images/home-images/blue_simple_abstractions_icon.svg"
+                onmouseover="this.src='images/home-images/dkblue_simple_abstractions_icon.svg'"
+                onmouseout="this.src='images/home-images/blue_simple_abstractions_icon.svg'" alt="" draggable="false">
             </div>
             <div class="reason-text">
               <h2>Simpler Abstractions</h2>
@@ -81,9 +81,9 @@
           </div>
           <div class="img-col">
             <div class="reason-img">
-              <img src="images/home-images/blue_autoscaling_icon.png"
-                onmouseover="this.src='images/home-images/dkblue_autoscaling_icon.png'"
-                onmouseout="this.src='images/home-images/blue_autoscaling_icon.png'" alt="" draggable="false">
+              <img src="images/home-images/blue_autoscaling_icon.svg"
+                onmouseover="this.src='images/home-images/dkblue_autoscaling_icon.svg'"
+                onmouseout="this.src='images/home-images/blue_autoscaling_icon.svg'" alt="" draggable="false">
             </div>
             <div class="reason-text">
               <h2>Autoscaling</h2>
@@ -94,9 +94,9 @@
           </div>
           <div class="img-col">
             <div class="reason-img">
-              <img src="images/home-images/blue_progressive_rollouts_icon.png"
-                onmouseover="this.src='images/home-images/dkblue_progressive_rollouts_icon.png'"
-                onmouseout="this.src='images/home-images/blue_progressive_rollouts_icon.png'" alt="" draggable="false">
+              <img src="images/home-images/blue_progressive_rollouts_icon.svg"
+                onmouseover="this.src='images/home-images/dkblue_progressive_rollouts_icon.svg'"
+                onmouseout="this.src='images/home-images/blue_progressive_rollouts_icon.svg'" alt="" draggable="false">
             </div>
             <div class="reason-text">
               <h2>Progressive Rollouts</h2>
@@ -109,9 +109,9 @@
         <div class="img-row">
           <div class="img-col">
             <div class="reason-img">
-              <img src="images/home-images/blue_event_intergrations_icon.png"
-                onmouseover="this.src='images/home-images/dkblue_event_intergrations_icon.png'"
-                onmouseout="this.src='images/home-images/blue_event_intergrations_icon.png'" alt="" draggable="false">
+              <img src="images/home-images/blue_event_intergrations_icon.svg"
+                onmouseover="this.src='images/home-images/dkblue_event_intergrations_icon.svg'"
+                onmouseout="this.src='images/home-images/blue_event_intergrations_icon.svg'" alt="" draggable="false">
             </div>
             <div class="reason-text">
               <h2>Event Integrations</h2>
@@ -122,9 +122,9 @@
           </div>
           <div class="img-col">
             <div class="reason-img">
-              <img src="images/home-images/blue_handle_events_icon.png"
-                onmouseover="this.src='images/home-images/dkblue_handle_events_icon.png'"
-                onmouseout="this.src='images/home-images/blue_handle_events_icon.png'" alt="" draggable="false">
+              <img src="images/home-images/blue_handle_events_icon.svg"
+                onmouseover="this.src='images/home-images/dkblue_handle_events_icon.svg'"
+                onmouseout="this.src='images/home-images/blue_handle_events_icon.svg'" alt="" draggable="false">
             </div>
             <div class="reason-text">
               <h2>Handle Events</h2>
@@ -135,9 +135,9 @@
           </div>
           <div class="img-col">
             <div class="reason-img">
-              <img src="images/home-images/blue_plugable_icon.png"
-                onmouseover="this.src='images/home-images/dkblue_plugable_icon.png'"
-                onmouseout="this.src='images/home-images/blue_plugable_icon.png'" alt="" draggable="false">
+              <img src="images/home-images/blue_plugable_icon.svg"
+                onmouseover="this.src='images/home-images/dkblue_plugable_icon.svg'"
+                onmouseout="this.src='images/home-images/blue_plugable_icon.svg'" alt="" draggable="false">
             </div>
             <div class="reason-text">
               <h2>Plugable</h2>
@@ -159,7 +159,7 @@
         Eventing work together to automate and manage tasks and applications.
       </p>
       <div class="components-content">
-        <img class="components-img" src="images/home-images/knative_componets_image.png" alt="" draggable="false" />
+        <img class="components-img" src="images/home-images/knative_flowchart_graphic.svg" alt="" draggable="false" />
         <div class="text-table">
           <p class="normal-text">
             Run serverless containers in Kubernetes with ease. Knative takes care of the details of networking,
@@ -182,7 +182,7 @@
         <div class="img-row">
           <div class="img-col">
             <div class="reason-img">
-              <img src="images/home-images/dev_focus_code_icon.png" alt="" draggable="false">
+              <img src="images/home-images/dev_focus_code_icon.svg" alt="" draggable="false">
             </div>
             <div class="reason-text">
               <h2>Developers focus on code</h2>
@@ -195,7 +195,7 @@
 
           <div class="img-col">
             <div class="reason-img">
-              <img src="images/home-images/dkblue_scale_icon.png" alt="" draggable="false">
+              <img src="images/home-images/dkblue_scale_icon.svg" alt="" draggable="false">
             </div>
             <div class="reason-text">
               <h2>Scale up and down</h2>
@@ -208,7 +208,7 @@
 
           <div class="img-col">
             <div class="reason-img">
-              <img src="images/home-images/cloud_agnostic_icon.png" alt="" draggable="false">
+              <img src="images/home-images/cloud_agnostic_icon.svg" alt="" draggable="false">
             </div>
             <div class="reason-text">
               <h2>Cloud agnostic</h2>
