fix: remove duplicate 'in' on home page
Signed-off-by: Lance Ball <lball@redhat.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -9,7 +9,7 @@
           <h1 class="main-headline">
             Knative is an open-source enterprise-level<br>
             solution for leveraging Kubernetes in<br>
-            in serverless applications.
+            serverless applications.
           </h1>
           <h2>Serverless workloads in Kubernetes environments.</h2>
           <p style="display: block">
