fixed button color now in home + rephrased headline

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -7,16 +7,15 @@
       <div class="mdx-hero">
         <div class="headline-section">
           <h1 class="main-headline">
-            Knative is an open-source enterprise-level<br>
-            solution for leveraging Kubernetes in<br>
-            serverless applications.
+            Knative is an Open-Source Enterprise-level<br>
+            solution to build Serverless and Event Driven Applications
           </h1>
-          <h2>Serverless workloads in Kubernetes environments.</h2>
+          <h2>Serverless Containers in Kubernetes environments.</h2>
           <p style="display: block">
-            <a href="{{ 'getting-started/' | url }}" class="md-button md-button--primary">
+            <a href="{{ 'getting-started/' | url }}" class="md-button white md-button--primary">
               Developer? Start Here!
             </a>
-            <a href="{{ 'install/' | url }}" class="md-button"> Cluster Administrator? Start Here!</a>
+            <a href="{{ 'install/' | url }}" class="md-button white"> Cluster Administrator? Start Here!</a>
           </p>
           <div class="trusted-by-container">
             <h3 class="trusted-by">Trusted by</h3>
