--- a/_index.html
+++ b/_index.html
@@ -117,9 +117,8 @@ title = "Knative"
 						<button type="button" class="btn btn-secondary" style="width:150px; margin-top: 12px;">Follow</button>
 					</a>
 				</p>
-				<p>For features announcements, interesting Knative news, and other great things.</p>
+				<p>For feature announcements, interesting Knative news, and other great things.</p>
 			</div>
 			</div>
 		</div>
 </section>
-
