--- a/overrides/home.html
+++ b/overrides/home.html
@@ -74,7 +74,7 @@
             <div class="reason-text">
               <h2>Simpler Abstractions</h2>
               <p class="normal-text">
-                Simplify your YAML with our custom CRD's
+                Simplify your YAML with our custom CRDs
               </p>
             </div>
           </div>
@@ -87,7 +87,7 @@
             <div class="reason-text">
               <h2>Autoscaling</h2>
               <p class="normal-text">
-                Scale down to zero and from zero
+                Scale down to zero and up from zero
               </p>
             </div>
           </div>
@@ -317,7 +317,7 @@
               {% include ".icons/fontawesome/brands/twitter.svg" %}
             </div>
             <h2>Follow us on Twitter</h2>
-            <p class="normal-text">For features announcements, interesting Knative news, and other great things.</p>
+            <p class="normal-text">For feature announcements, interesting Knative news, and other great things.</p>
           </a>
         </div>
       </div>
