added cncf incubation notice

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -323,6 +323,10 @@
       </div>
     </div>
   </section>
+  <section class="cncf-notice-container">
+    <h2>Knative is a <a href="https://www.cncf.io/">Cloud Native Computing Foundation</a> incubation project</h2>
+    <img class="cncf-logo" src="images/home-images/cncf-color.png" alt="" draggable="false" />
+  </section>
 </div>
 {% endblock %}
 
