adds cncf incubation notice
Signed-off-by: Paul S. Schweigert <paulschw@us.ibm.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -289,6 +289,11 @@
     </div>
   </section>
 
+   <section class="cncf-notice-container">
+    <h3>Knative is a <a href="https://www.cncf.io/">Cloud Native Computing Foundation</a> incubation project</h3>
+    <img class="cncf-logo" src="images/home-images/cncf-color.png" alt="" draggable="false" />
+   </section>
+
   <section class="whats-next-container">
     <div class="md-grid md-typeset">
       <h1>What's Next?</h1>
