--- a/overrides/home.html
+++ b/overrides/home.html
@@ -12,10 +12,8 @@
           </h1>
           <h2>Serverless Containers in Kubernetes environments.</h2>
           <p style="display: block">
-            <a href="{{ 'getting-started/' | url }}" class="md-button white md-button--primary">
-              Developer? Start Here!
-            </a>
-            <a href="{{ 'install/' | url }}" class="md-button white"> Cluster Administrator? Start Here!</a>
+            <a href="{{ 'getting-started/' | url }}" class="md-button white md-button--primary">Try the tutorial</a>
+            <a href="{{ 'install/' | url }}" class="md-button white">Install Knative on your cluster</a>
           </p>
           <div class="trusted-by-container">
             <h3 class="trusted-by">Trusted by</h3>
