--- a/_index.html
+++ b/_index.html
@@ -101,9 +101,9 @@ title = "Knative"
 					<div class="mb-4 h1">
 						<i class="fab fa-github"></i>
 					</div>
-					<h4>Contributions welcome</h4>
-					<p><a href="./contributing/">
-						<button type="button" class="btn btn-secondary" style="width:150px; margin-top: 12px;">Contribute</button>
+					<h4>Join the Community</h4>
+					<p><a href="./community/">
+						<button type="button" class="btn btn-secondary" style="width:150px; margin-top: 12px;">Community</button>
 					</a>
 				</p>
 				<p>Want to join the fun on Github? New users are always welcome!</p>
