updates slack URLs to CNCF instance
Signed-off-by: Paul S. Schweigert <paul@paulschweigert.com>

--- a/_index.html
+++ b/_index.html
@@ -91,7 +91,7 @@ title = "Knative"
 					</div>
 					<h4 >Talk to us on Slack</h4>
 					<p>
-						<a class="text-white" href="https://slack.knative.dev/">
+						<a class="text-white" href="https://slack.cncf.io/">
 							<button type="button" class="btn btn-secondary" style="width:150px; margin-top: 12px;">Talk</button>
 						</a>
 					</p>
