Fixing Follow us on Twitter link

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -270,7 +270,7 @@
             <p class="normal-text">Want to join the fun on Github? New users are always welcome!</p>
           </a>
         </div>
-        <div class="pane">
+        <div class="col">
           <a href="https://twitter.com/KnativeProject" title="Twitter Link">
             <div class="twemoji">
               {% include ".icons/fontawesome/brands/twitter.svg" %}
