restores missing sections from homepage
Signed-off-by: Paul S. Schweigert <paul@paulschweigert.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -262,6 +262,50 @@
           </a>
         </div>
         <div class="col">
+          <a href="{{ 'about/case-studies/puppet/' | url }}">
+            <div class="logo">
+              <img class="puppet" src="images/case-studies/puppet.png" alt="" draggable="false" />
+            </div>
+            <hr>
+            <p class="normal-text">
+              "I'm a strong believer in
+              working with open-source
+              vendors. We've made
+              contributions to numerous
+              projects, including Tekton,
+              Knative, Ambassador, and
+              gVisor --All of which we depend
+              on to make our product
+              functional."<br><br>
+
+              —Noah Fontes,<br>
+              Senior Principal Software Engineer for<br>Puppet
+            </p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="cncf-notice-container">
+    <h3>Knative is a <a href="https://www.cncf.io/">Cloud Native Computing Foundation</a> incubation project</h3>
+    <img class="cncf-logo" src="images/home-images/cncf-color.png" alt="" draggable="false" />
+  </section>
+
+  <section class="whats-next-container">
+    <div class="md-grid md-typeset">
+      <h1>What's Next?</h1>
+      <div class="component-flex">
+        <div class="pane">
+          <a href="https://slack.cncf.io" title="Slack Link">
+            <div class="twemoji">
+              {% include ".icons/fontawesome/brands/slack.svg" %}
+            </div>
+            <h2>Talk to us on Slack in #knative</h2>
+            <p class="normal-text">Interested in learning more, speaking to other contributors, or finding answers?</p>
+          </a>
+        </div>
+        <div class="pane">
           <a href="{{ 'community/contributing' | url }}" title="Contributing Link">
             <div class="twemoji">
               {% include ".icons/fontawesome/brands/github.svg" %}
