--- a/overrides/home.html
+++ b/overrides/home.html
@@ -283,6 +283,20 @@
             </p>
           </a>
         </div>
+        <div class="col">
+          <a href="{{ 'about/case-studies/pnc/' | url }}">
+            <div class="logo">
+              <img class="pnc" src="images/case-studies/pnc_bank.png" alt="" draggable="false" />
+            </div>
+            <hr>
+            <p class="normal-text">
+              “Our real success was our ability to say if your code change is fully compliant and does not affect complex authentication or funds transfer, you can go from new code to production in just the time it takes to run your pipelines. There is no longer 120 hours over 37 days of non-code compliance work standing in the way of production. Thousands of PNC software developers have seen their deployment window shrink to near real time. Our teams achieve true continuous delivery. That is our big win.”<br><br>
+
+              -- Director,<br>
+              <br>PNC Bank
+            </p>
+          </a>
+        </div>
       </div>
     </div>
   </section>
